attempt to fix tabWrap height issue in retinadisplay. no luck. hack.

--- a/src/styles/charts.module.css
+++ b/src/styles/charts.module.css
@@ -17,6 +17,12 @@
     display: flex;
     max-width: calc(100vw - var(--color-toggle-width));
     overflow-x: scroll;
+    height: 50px;
+    padding: 0 0 0 0;
+    margin:  0 0 0 0;
+    overflow-y: hidden;
+    position: relative;
+    z-index: 0;
 }
 
 .tab, .unselected {
@@ -26,7 +32,8 @@
     justify-content: right;
     vertical-align: top;
     width: 50px;
-    height: 100%;
+    margin: 0 0 0 10px;
+    height: 25px;
     font-size: 12px;
     color: #000;
     border-radius: 0 4px 0 0;
@@ -38,8 +45,8 @@
     background: #fff;
 }
 
-.uselected {
-    background: rgba(255,255,255,.6);
+.unselected {
+    background: rgba(255,255,255,.5);
 }
 
 .unselected span,
@@ -47,6 +54,9 @@
     font-size: 16px;
     position: absolute;
     right: 14px;
+    height: 25px;
+    overflow: hidden;
+    display: inline-block;
 }
 
 .tab::before, .unselected::before {
@@ -74,6 +84,7 @@
     padding: 10px;
     width: 33.333%;
     height: 100%;
+    display: flex;
 }
 
 .colorToggle {
@@ -135,9 +146,9 @@
 }
 
 .allTab.unselected {
-    background-color: rgba(255,255,255,.1);
+    background-color: rgba(255,255,255,0.1);
 }
 
 .allTab span {
-    top: 6px;
+    top: 5px;
 }
